--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "@tiptap/extension-youtube": "^2.0.0-beta.199",
     "@tiptap/react": "^2.0.0-beta.199",
     "@tiptap/starter-kit": "^2.0.0-beta.199",
+    "@types/formidable": "^2.0.5",
     "classnames": "^2.3.2",
+    "cloudinary": "^1.32.0",
+    "formidable": "^2.0.1",
     "next": "latest",
     "react": "18.2.0",
     "react-dom": "18.2.0",
