--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@tiptap/react": "^2.0.0-beta.199",
     "@tiptap/starter-kit": "^2.0.0-beta.199",
     "@types/formidable": "^2.0.5",
+    "axios": "^1.1.3",
     "classnames": "^2.3.2",
     "cloudinary": "^1.32.0",
     "formidable": "^2.0.1",
