--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.6.0",
+    "slugify": "^1.6.5",
     "tailwind-scrollbar": "^2.0.1"
   },
   "devDependencies": {
