--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "classnames": "^2.3.2",
     "cloudinary": "^1.32.0",
     "formidable": "^2.0.1",
+    "joi": "^17.6.4",
+    "mongoose": "^6.7.0",
     "next": "latest",
     "react": "18.2.0",
     "react-dom": "18.2.0",
