--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "@tiptap/extension-youtube": "^2.0.0-beta.199",
     "@tiptap/react": "^2.0.0-beta.199",
     "@tiptap/starter-kit": "^2.0.0-beta.199",
+    "@types/dateformat": "^5.0.0",
     "@types/formidable": "^2.0.5",
     "axios": "^1.1.3",
     "classnames": "^2.3.2",
     "cloudinary": "^1.32.0",
+    "dateformat": "^5.0.3",
     "formidable": "^2.0.1",
     "joi": "^17.6.4",
     "mongoose": "^6.7.0",
@@ -24,6 +26,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.6.0",
+    "react-infinite-scroll-component": "^6.1.0",
     "slugify": "^1.6.5",
     "tailwind-scrollbar": "^2.0.1"
   },
