--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "joi": "^17.6.4",
     "mongoose": "^6.7.0",
     "next": "latest",
+    "next-auth": "^4.15.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.6.0",
