--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@tippyjs/react": "^4.2.6",
     "@tiptap/extension-image": "^2.0.0-beta.199",
     "@tiptap/extension-link": "^2.0.0-beta.199",
     "@tiptap/extension-placeholder": "^2.0.0-beta.199",
@@ -20,6 +21,7 @@
     "cloudinary": "^1.32.0",
     "dateformat": "^5.0.3",
     "formidable": "^2.0.1",
+    "html-react-parser": "^3.0.4",
     "joi": "^17.6.4",
     "mongoose": "^6.7.0",
     "next": "latest",
