--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "mongoose": "^6.7.0",
     "next": "latest",
     "next-auth": "^4.15.0",
+    "nprogress": "^0.2.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.6.0",
@@ -36,6 +37,7 @@
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.7",
     "@types/node": "18.11.3",
+    "@types/nprogress": "^0.2.0",
     "@types/react": "18.0.21",
     "@types/react-dom": "18.0.6",
     "autoprefixer": "^10.4.12",
